2006-08-22 Ales Hvezda   <ahvezda@geda.seul.org>
	
	* scheme/Makefile.am: Added a couple files to the distclean and
	maintainerclean rules to make distcheck happy.

2006-08-21 Ales Hvezda   <ahvezda@geda.seul.org>

        * README: Updated the README a little to be ready for the next
        release.

2006-08-19 Ales Hvezda   <ahvezda@geda.seul.org>

        * configure.ac: Bumped version number to 20060821 in prep for the
        next gEDA/gaf release.

2006-07-04 Ales Hvezda   <ahvezda@geda.seul.org>

	* tests/multiequal.spice-sdb: Updated golden file to take into
	account case change of .end

	* tests/amp.spice-sdb, tests/darlington.spice-sdb: Updated golden
	file to take into account case change of .end

	* tests/powersupply.sch, powersupply.allegro, powersupply.protelII
	powersupply.tango: Fixed invalid attribute in schematic and updated
	some golden regression files.

	* src/g_netlist.c, src/g_rc.c, src/gnetlist.c, src/i_vars.c,
	src/parsecmd.c, src/s_cpinlist.c, src/s_hierarchy.c, src/s_net.c,
	src/s_netattrib.c, src/s_netlist.c, src/s_rename.c, src/s_traverse.c,
	src/vams_misc.c: Converted all malloc/free calls to g_malloc/g_free

2006-04-22 Carlos Nieves Onega <cnieves@iespana.es>
	
	* include/globals.h, include/prototype.h, src/g_netlist.c, 
	  src/g_register.c, src/globals.c, s_netlist.c, s_traverse.c:
	  Build a netlist of graphical objects. This feature enables
	  using directives in the schematic.
	
        * scheme/gnet-drc2.scm: 
	    - Added support for NoConnection and DontCheckPintypes directives.
	    - Changed the drc connection matrix. Now an unknown pin doesn't 
              generate an error, and it can drive a net.
            - Added report for pins without the 'pintype' attribute.
	    - Display the pins when reporting a net with only one connection.
	
2006-04-11 Carlos Nieves Onega <cnieves@iespana.es>

	* scheme/gnet-spice-sdb.scm: Changed .END and .ENDS cards to lowercase.
	This fixes bug 1442912.
